<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="unikom.dimasnurfauzi.androiduts.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily"
        android:name="unikom.dimasnurfauzi.androiduts.ui.daily.DailyFragment"
        android:label="@string/nav_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="unikom.dimasnurfauzi.androiduts.ui.gallery.GalleryFragment"
        android:label="@string/nav_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_music"
        android:name="unikom.dimasnurfauzi.androiduts.ui.music.MusicVideoFragment"
        android:label="@string/nav_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="unikom.dimasnurfauzi.androiduts.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
